--- a/domain.yml
+++ b/domain.yml
@@ -177,16 +177,16 @@ responses:
   - text: Sorry, {PERSON} is not in your list of known recipients.
   utter_insufficient_funds:
   - text: Sorry, you don't have enough money to do that!
-  utter_known_recipients:
-  - text: These are your known recipients {known_recipients}.
   utter_credit_card_balance:
   - text: The current balance for your {credit_card} account is {currency}{amount_of_money}.
-
+  utter_recipients:
+  - text: These are your known recpients to whom you can send money:\n{formatted_recipients}
 actions:
 - action_account_balance
 - action_session_start
 - action_restart
 - action_credit_card_balance
+- action_recipients
 
 forms:
 - cc_payment_form
