--- a/domain.yml
+++ b/domain.yml
@@ -1,5 +1,5 @@
 session_config:
-  session_expiration_time: 0.0
+  session_expiration_time: 0
   carry_over_slots_to_new_session: true
 intents:
 - transfer_money:
@@ -16,12 +16,18 @@ intents:
 - search_transactions:
     use_entities: []
 - check_balance:
-    use_entities: ["account_type","credit_card"]
+    use_entities:
+    - credit_card
+    - account_type
 - check_earnings:
     use_entities: []
 - check_recipients
 - session_start
 - restart
+- human_handoff:
+    triggers: utter_handoff
+- handoff:
+    triggers: utter_whoami
 
 entities:
 - amount-of-money
@@ -33,7 +39,6 @@ entities:
 - PERSON
 - number
 - account_type
-
 slots:
   PERSON:
     type: unfeaturized
@@ -48,42 +53,41 @@ slots:
     type: unfeaturized
   credit_card:
     type: unfeaturized
+  credit_card_balance:
+    type: unfeaturized
+  currency:
+    type: unfeaturized
   end_time:
+    type: unfeaturized
+  end_time_formatted:
+    type: unfeaturized
+  grain:
+    type: unfeaturized
+  known_recipients:
     type: unfeaturized
   payment_amount:
     type: unfeaturized
   payment_amount_type:
     type: unfeaturized
-    initial_value: ""
+    initial_value: ''
   requested_slot:
     type: unfeaturized
   search_type:
     type: unfeaturized
   start_time:
     type: unfeaturized
-  time:
-    type: unfeaturized
   start_time_formatted:
+    type: unfeaturized
+  time:
     type: unfeaturized
   time_formatted:
     type: unfeaturized
-  end_time_formatted:
-    type: unfeaturized
-  grain:
-    type: unfeaturized
-  vendor_name:
-    type: unfeaturized
-  currency:
-    type: unfeaturized
   transaction_history:
-    type: unfeaturized
-  credit_card_balance:
-    type: unfeaturized
-  known_recipients:
     type: unfeaturized
   vendor_list:
     type: unfeaturized
-
+  vendor_name:
+    type: unfeaturized
 responses:
   utter_ask_transfer_form_amount_of_money:
   - text: How much money do you want to transfer?
@@ -96,7 +100,7 @@ responses:
   utter_noworries:
   - text: You're welcome :)
   utter_transfer_complete:
-  - text: 'Successfully transferred {currency}{amount_of_money} to {PERSON}.'
+  - text: Successfully transferred {currency}{amount_of_money} to {PERSON}.
   utter_transfer_charge:
   - text: You are entitled to six transfers within a statement cycle before being
       charged. For subsequent transfers you will be charged {currency}10 per transaction.
@@ -122,18 +126,17 @@ responses:
   utter_no_transactdate:
   - text: Sorry, that's not a recognized time frame.
   utter_cc_pay_scheduled:
-  - text: 'Payment of {currency}{payment_amount}{payment_amount_type} towards your {credit_card}
-      account scheduled to be paid at {time_formatted}.'
+  - text: Payment of {currency}{payment_amount}{payment_amount_type} towards your
+      {credit_card} account scheduled to be paid at {time_formatted}.
   utter_searching_spend_transactions:
-  - text: Searching transactions{vendor_name} between {start_time_formatted}
-      and {end_time_formatted}...
+  - text: Searching transactions{vendor_name} between {start_time_formatted} and {end_time_formatted}...
   utter_found_spend_transactions:
-  - text: 'I found {numtransacts} transactions{vendor_name} totalling {currency}{total}.'
+  - text: I found {numtransacts} transactions{vendor_name} totalling {currency}{total}.
   utter_searching_deposit_transactions:
-  - text: Searching deposits made to your account between {start_time_formatted}
-      and {end_time_formatted}...
+  - text: Searching deposits made to your account between {start_time_formatted} and
+      {end_time_formatted}...
   utter_found_deposit_transactions:
-  - text: 'I found {numtransacts} deposits made to your account totalling {currency}{total}'
+  - text: I found {numtransacts} deposits made to your account totalling {currency}{total}
   utter_ask_rephrase:
   - text: I didn't quite understand that. Can you rephrase?
   utter_ask_switch_goal:
@@ -151,28 +154,29 @@ responses:
   utter_default:
   - text: Sorry, I didn't get that. Could you rephrase?
   utter_ask_cc_payment_form_confirm:
-  - text: 'Would you like to schedule a payment of {currency}{payment_amount}{payment_amount_type}
-      towards your {credit_card} account for {time_formatted}?'
-    buttons:
-    - title: Yes
-      payload: /affirm
-    - title: No, cancel the transaction
-      payload: /deny
+  - buttons:
+    - payload: /affirm
+      title: Yes
+    - payload: /deny
+      title: No, cancel the transaction
+    text: Would you like to schedule a payment of {currency}{payment_amount}{payment_amount_type}
+      towards your {credit_card} account for {time_formatted}?
   utter_ask_transfer_form_confirm:
-  - text: 'Would you like to transfer {currency}{amount_of_money} to {PERSON}?'
-    buttons:
-    - title: Yes
-      payload: /affirm
-    - title: No, cancel the transaction
-      payload: /deny
+  - buttons:
+    - payload: /affirm
+      title: Yes
+    - payload: /deny
+      title: No, cancel the transaction
+    text: Would you like to transfer {currency}{amount_of_money} to {PERSON}?
   utter_transfer_cancelled:
   - text: Transfer cancelled.
   utter_cc_pay_cancelled:
   - text: Credit card account payment cancelled.
   utter_account_balance:
-  - text: "Your balance is {currency}{init_account_balance}."
+  - text: Your balance is {currency}{init_account_balance}.
   utter_changed_account_balance:
-  - text: "Your balance was {currency}{init_account_balance} and is now {currency}{account_balance} after transfers and payments."
+  - text: Your balance was {currency}{init_account_balance} and is now {currency}{account_balance}
+      after transfers and payments.
   utter_unknown_recipient:
   - text: Sorry, {PERSON} is not in your list of known recipients.
   utter_insufficient_funds:
@@ -181,13 +185,55 @@ responses:
   - text: The current balance for your {credit_card} account is {currency}{amount_of_money}.
   utter_recipients:
   - text: These are your known recpients to whom you can send money:{formatted_recipients}
+  utter_handoff: 
+  - text: /handoff
+  utter_whoami:
+  - text: Hi! I'm your Financial Assistant!
 actions:
 - action_account_balance
 - action_session_start
 - action_restart
 - action_credit_card_balance
 - action_recipients
-
+- utter_ask_transfer_form_amount_of_money
+- utter_ask_transfer_form_PERSON
+- utter_goodbye
+- utter_greet
+- utter_noworries
+- utter_transfer_complete
+- utter_transfer_charge
+- utter_ask_cc_payment_form_payment_amount
+- utter_ask_cc_payment_form_credit_card
+- utter_ask_cc_payment_form_time
+- utter_ask_transact_search_form_vendor_name
+- utter_ask_transact_search_form_time
+- utter_no_payment_amount
+- utter_no_paymentdate
+- utter_no_creditcard
+- utter_no_vendor_name
+- utter_no_transactdate
+- utter_cc_pay_scheduled
+- utter_searching_spend_transactions
+- utter_found_spend_transactions
+- utter_searching_deposit_transactions
+- utter_found_deposit_transactions
+- utter_ask_rephrase
+- utter_ask_switch_goal
+- utter_ask_back_to_transact
+- utter_ask_back_to_transfer
+- utter_ok
+- utter_ask_continue
+- utter_default
+- utter_ask_cc_payment_form_confirm
+- utter_ask_transfer_form_confirm
+- utter_transfer_cancelled
+- utter_cc_pay_cancelled
+- utter_account_balance
+- utter_changed_account_balance
+- utter_unknown_recipient
+- utter_insufficient_funds
+- utter_credit_card_balance
+- utter_recipients
 forms:
 - cc_payment_form
 - transfer_form
