add dependency on docs, and missing action

--- a/domain.yml
+++ b/domain.yml
@@ -214,6 +214,7 @@ actions:
 - action_recipients
 - action_handoff
 - action_handoff_options
+- utter_greet
 forms:
 - cc_payment_form
 - transfer_form
